discussion/kv_engine/163970/163970_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48038: Make CheckpointConfig dynamic params atomic

Change-Id: I58d065ee758b8a4df38830cee4f1c461747284f9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-10-20 09:47:21.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-20 09:58:34.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35057/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_config.cc:70:19:
error: constructor for "CheckpointConfig" must explicitly initialize the reference member "engine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35057/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41259/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/checkpoint_config.cc(77): error C2530: "CheckpointConfig::engine": references must be initialized ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41259/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13568/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.cc:70:19: error: constructor for "CheckpointConfig" must explicitly initialize the reference member "engine" [clang-diagnostic-error]
CheckpointConfig::CheckpointConfig(Configuration& config)
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.h:104:33: note: declared here
    EventuallyPersistentEngine& engine;
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.cc:78:20: error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
    bindToEPConfig(config);
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.h:71:5: note: "bindToEPConfig" declared here
    void bindToEPConfig();
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.cc:81:19: error: constructor for "CheckpointConfig" must explicitly initialize the reference member "engine" [clang-diagnostic-error]
CheckpointConfig::CheckpointConfig(const CheckpointConfig& other) {
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.h:104:33: note: declared here
    EventuallyPersistentEngine& engine;
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13568/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_config.cc:70:19:
error: constructor for "CheckpointConfig" must explicitly initialize the reference member "engine" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13568/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14335/ : FAILURE

Compile error at [2021-10-20T09:49:12.702Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/benchmarks/item_compressor_bench.cc:106:20:
error: call to implicitly-deleted default constructor of "ItemCompressorBench"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14335/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3200/ : FAILURE

Compile error at [2021-10-20T09:48:48.032Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/checkpoint_config.cc:70:19:
error: constructor for "CheckpointConfig" must explicitly initialize the reference member "engine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3200/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15177/ : FAILURE

Compile error at [2021-10-20T09:49:15.868Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/benchmarks/item_compressor_bench.cc:106:1:
error: use of deleted function ?ItemCompressorBench::ItemCompressorBench()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15177/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15456/ : FAILURE

Compile error at [2021-10-20T09:50:24.772Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/checkpoint_config.cc:70:1:
error: uninitialized reference member in ?class EventuallyPersistentEngine&? [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15456/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3270/ : FAILURE

Compile error at [2021-10-20T09:53:36.125Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/benchmarks/item_compressor_bench.cc:106:1:
error: use of deleted function ?ItemCompressorBench::ItemCompressorBench()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3270/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23503/ : FAILURE

Compile error at [2021-10-20T09:50:42.945Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/checkpoint_config.cc:70:19:
error: constructor for "CheckpointConfig" must explicitly initialize the reference member "engine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23503/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16112/ : FAILURE

Compile error at [2021-10-20T09:49:15.074Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/checkpoint_config.cc:70:19:
error: constructor for "CheckpointConfig" must explicitly initialize the reference member "engine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16112/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12367/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-10-20 10:04:24.000000000
Message: 
Patch Set 1: Code-Review-1
----------------------------------------------------------------------------------------------------------------------
